Credit Addition Functionality
Now the user is able to get more credits using a specific option in the
profile menu "Get More Credits!!!", it is free now but we plan to
incorporate a PayPal gateway.

--- a/ProjectShode/ProjectShode.csproj
+++ b/ProjectShode/ProjectShode.csproj
@@ -61,6 +61,7 @@
     </Content>
     <Content Include="CreateProject.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="ProfileCredits.aspx" />
     <Content Include="Profiles.aspx" />
     <Content Include="ProfileCompose.aspx" />
     <Content Include="ProfileContributions.aspx" />
@@ -147,6 +148,12 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProfileCredits.aspx.cs">
+      <DependentUpon>ProfileCredits.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ProfileCredits.aspx.designer.cs">
+      <DependentUpon>ProfileCredits.aspx</DependentUpon>
     </Compile>
     <Compile Include="Profiles.aspx.cs">
       <DependentUpon>Profiles.aspx</DependentUpon>
