New BEs added: Development and Contribution
New business entities have been added for the developments and the
contributions, what's more the Topic has been removed from the project
since it is not useful anymore.

--- a/ShodeLibrary/ShodeLibrary.csproj
+++ b/ShodeLibrary/ShodeLibrary.csproj
@@ -53,8 +53,8 @@
     <Compile Include="ProjectBE.cs" />
     <Compile Include="ProjectDAC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TopicBE.cs" />
-    <Compile Include="TopicDAC.cs" />
+    <Compile Include="DevelopmentBE.cs" />
+    <Compile Include="DevelopmentDAC.cs" />
     <Compile Include="UserBE.cs" />
     <Compile Include="UserDAC.cs" />
   </ItemGroup>
