Added AJAX to the Project
Use of Ajax in order to calculate the strength of the password when a
user sign up.

--- a/ProjectShode/ProjectShode.csproj
+++ b/ProjectShode/ProjectShode.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit">
+      <HintPath>..\ShodeLibrary\Service References\AjaxControlToolkit\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
