Added AJAX for upload profile pictures
Added this functionality to the signup form.

--- a/ProjectShode/ProjectShode.csproj
+++ b/ProjectShode/ProjectShode.csproj
@@ -74,6 +74,7 @@
     <Content Include="ProfileMy.aspx" />
     <Content Include="ProjectProfile.aspx" />
     <Content Include="Projects.aspx" />
+    <Content Include="Scripts\FileUploader.js" />
     <Content Include="Signup.aspx" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
@@ -261,6 +262,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Images\" />
+    <Folder Include="Uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
