Contribution DAC Changes and Bug Fixing
The contribution data access component has been changed to use
parameterized queries in all its methods.

What's more a minor bug regarding to credits updating when a user
contributes has been fixed in ProjectProfile.cs

--- a/ProjectShode/ProjectShode.csproj
+++ b/ProjectShode/ProjectShode.csproj
@@ -170,6 +170,7 @@
     </Compile>
     <Compile Include="News.aspx.cs">
       <DependentUpon>News.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="News.aspx.designer.cs">
       <DependentUpon>News.aspx</DependentUpon>
