--- a/ShodeLibrary/ShodeLibrary.csproj
+++ b/ShodeLibrary/ShodeLibrary.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DevelopmentBE.cs" />
     <Compile Include="DevelopmentDAC.cs" />
+    <Compile Include="StatisticalSingleton.cs" />
     <Compile Include="UserBE.cs" />
     <Compile Include="UserDAC.cs" />
   </ItemGroup>
